--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   	<link rel="stylesheet" href="simon.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="js/simon.js" type="text/javascript"></script>
-<script src="lib/jquery-3.1.1.js"></script>
+	<script src="lib/jquery-3.1.1.js"></script>
+  <script src="js/simon.js" type="text/javascript"></script>
+
 </head>
 
 <div class="jumbotron vertical-center secondary-bg text-center">
-  <div id="section1" class="section" onclick="pressed(1)">Blue (1)</div>
-  <div id="section2" class="section" onclick="pressed(2)">Red (2)</div>
-  <div id="section3" class="section" onclick="pressed(3)">Green (3)</div>
-  <div id="section4" class="section" onclick="pressed(4)">Yellow (4)</div>
+  <div id="1" class="section" data-section="1">Blue (1)</div>
+  <div id="2" class="section" data-section="2">Red (2)</div>
+  <div id="3" class="section" data-section="3">Green (3)</div>
+  <div id="4" class="section" data-section="4">Yellow (4)</div>
 </div>
