--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
   <script src="js/simon.js" type="text/javascript"></script>
 
 </head>
-
-<div class="jumbotron vertical-center secondary-bg text-center">
-  <div id="1" class="section" data-section="1">Blue (1)</div>
-  <div id="2" class="section" data-section="2">Red (2)</div>
-  <div id="3" class="section" data-section="3">Green (3)</div>
-  <div id="4" class="section" data-section="4">Yellow (4)</div>
+<body>
+<div class="wrapper">
+  <div class="game-board">
+				<div class="simon">
+					<ul>
+						<li id="0" class="section red" data-section="0"></li>
+						<li id="1" class="section blue" data-section="1"></li>
+						<li id="2" class="section yellow" data-section="2"></li>
+						<li id="3" class="section green" data-section="3"></li>
+					</ul>
+				</div>
+			</div>
+      			<div class="game-info">
+				<h2 id="level">Level: <span data-level="0">0</span></h2>
+				<button class="btn btn-primary" data-action="start">New Game</button>
+				<p data-action="lose">Sorry, you lost on <span data-level="0"></span> levels!</p>
+				<p data-action="wrong">Sorry, wrong button, replaying level <span data-level="0"></span> </p>
+			</div>
+			<div>
+				<h2>Mode</h2>
+				<input type="radio" name="mode" value="normal" checked>Normal<br>
+				<input type="radio" name="mode" value="strict">Strict<br>
+				<input type="radio" name="mode" value="free">Free play
+			</div>
+		<div data-action="sound"></div>
+		<footer>
+      Created by Chris McLean for <a href='https://www.freecodecamp.com'>FreeCodeCamp</a> with abundent help from <a href="https://codeplanet.io/building-simon-says-javascript/">Kelly King</a>
+		</footer>
 </div>
+</body>
+</html>
