Additional bug fixing and functionality
Working through my bug and functionality list. Nearly all gameplay functionality is in place now, just need to at a check for the user winning. Once that is in place need to work on a few more bugs and generally cleaning up the system

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       			<div class="game-info">
 				<h2 id="level">Level: <span data-level="0">0</span></h2>
 				<button class="btn btn-primary" data-action="start">New Game</button>
-				<p data-action="lose">Sorry, you lost on <span data-level="0"></span> levels!</p>
+				<p data-action="lose">Sorry, you lost on level <span data-level="0"></span>.</p>
 				<p data-action="wrong">Sorry, wrong button, replaying level <span data-level="0"></span> </p>
 			</div>
 			<div>
