--- a/index.html
+++ b/index.html
@@ -5,32 +5,33 @@
 	<link rel="stylesheet" href="simon.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		crossorigin="anonymous">
-	<script src="lib/jquery-3.1.1.js"></script>
-	<script src="js/simon.js" type="text/javascript"></script>
-
+		<script src="lib/jquery-3.1.1.js"></script>
+		<script src="js/simon.js" type="text/javascript"></script>
+		<script src="https://use.fontawesome.com/be010ebfb5.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"> 
 </head>
 
 <body>
 	<div class="wrapper">
-		<div>
-			<div class="game-board">
-				<div class="simon">
-					<ul>
-						<li id="0" class="section red" data-section="0"></li>
-						<li id="1" class="section blue" data-section="1"></li>
-						<li id="2" class="section yellow" data-section="2"></li>
-						<li id="3" class="section green" data-section="3"></li>
-					</ul>
-				</div>
+		<div class='header text-center'>
+			<h2 id="level">Level: <span data-level="0">0</span></h2>
+			<h2 id="free-play">Free Play</h2>
+			<p data-action="lose">Sorry, you lost on level <span data-level="0"></span>.</p>
+			<p data-action="wrong">Sorry, wrong button, replaying level <span data-level="0"></span>.</p>
+			<p data-action="win">Congratulations!!! YOU WIN!</p>
+			<p data-action="start-a-game">Press New Game to start a game.</p>
+		</div>
+		<div class ="main-game">
+			<div class="simon">
+				<ul>
+					<li id="0" class="section red" data-section="0"></li>
+					<li id="1" class="section blue" data-section="1"></li>
+					<li id="2" class="section yellow" data-section="2"></li>
+					<li id="3" class="section green" data-section="3"></li>
+				</ul>
 			</div>
 			<div class="game-info">
-				<h2 id="level">Level: <span data-level="0">0</span></h2>
 				<button class="btn btn-primary" data-action="start">New Game</button>
-				<p data-action="lose">Sorry, you lost on level <span data-level="0"></span>.</p>
-				<p data-action="wrong">Sorry, wrong button, replaying level <span data-level="0"></span>.</p>
-				<p data-action="win">Congratulations!!! YOU WIN!</p>
-			</div>
-			<div>
 				<h2>Mode</h2>
 				<input type="radio" name="mode" value="normal" checked>Normal<br>
 				<input type="radio" name="mode" value="strict">Strict<br>
@@ -49,7 +50,8 @@
 			<li><strong>Free play</strong> - No sequence or levels, you are free to make your own light and sound show.</li>
 		</div>
 		<footer>
-			Created by Chris McLean for <a href='https://www.freecodecamp.com'>FreeCodeCamp</a> with abundent help from <a href="https://codeplanet.io/building-simon-says-javascript/">Kelly King</a>
+			Created by Chris McLean <a href='https://github.com/CronoxAU/SimonGame'><i class="fa fa-github" aria-hidden="true"></i></a>			<a href='https://twitter.com/cjmclean'><i class="fa fa-twitter" aria-hidden="true"></i></a><br /> A project for <a href='https://www.freecodecamp.com'>FreeCodeCamp</a>			with abundent help from
+			<a href="https://codeplanet.io/building-simon-says-javascript/">Kelly King</a> and <a href="https://www.danpurdy.co.uk/tutorial/simon-says-game-in-jquery-tutorial/">Dan Purdy</a>
 		</footer>
 	</div>
 </body>
